src/objects/LnP_Mandatory_Subsections__mdt.object
<CustomObject>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewOrReinstate__c</fullName>
        <label>RenewOrReinstate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubSection__c</fullName>
        <label>SubSection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mandatory Subsections</label>
    <pluralLabel>Mandatory Subsectionss</pluralLabel>
</CustomObject>